# Sample-Installable-Python-Project

./: .gitignore  README.md  pyproject.toml  setup.py
src/project_name/: __init__.py
