[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_name"
description = ""
dynamic = ["version"]
authors = [
    {name = "John Doe", email = "john.doe@gmail.com"}
]
maintainers = [
    {name = "John Doe", email = "john.doe@gmail.com"}
]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "requests"
]

[tool.setuptools.dynamic]
version = {attr = "project_name.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ytdl" = ["configs/*"]
